--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=6a050788c69c8570b7b6",
-    "/css/app.css": "/css/app.css?id=18dd232607785e7a59fd"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
